Fixed Atlas Grade maps, end was cut off for some reason
Added POST to user resource login description

--- a/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/resource_UserResource.html
+++ b/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/resource_UserResource.html
@@ -647,8 +647,8 @@ pass)
       <a name="path__user_login.html"></a>
       <h1>/user/login</h1>
       <p class="note">Mount Point: <a href="../api/user/login">/api/user/login</a></p>
-      <a name="GET"></a>
-      <h2>GET</h2>
+      <a name="POST"></a>
+      <h2>POST</h2>
       <p>
             Log the indicated user into the system
           </p>
@@ -665,7 +665,7 @@ pass)
           <td>
             The username of the user
           </td>
-          <td>query</td>
+          <td>form</td>
           <td></td>
         </tr>
         <tr>
@@ -673,7 +673,7 @@ pass)
           <td>
             The password of the user
           </td>
-          <td>query</td>
+          <td>form</td>
           <td></td>
         </tr>
         <tr>
