Updated Documentation for new features

--- a/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/el_ns0_taxonWithQueryStats.html
+++ b/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/el_ns0_taxonWithQueryStats.html
@@ -158,7 +158,9 @@
 		&quot;versionForm&quot; : &quot;...&quot;,
 		&quot;gatewayRecordCount&quot; : ...
 	},
-	&quot;querySpecificObservationCount&quot; : ...
+	&quot;querySpecificObservationCount&quot; : ...,
+	&quot;minYear&quot; : ...,
+	&quot;maxYear&quot; : ...
 }</code>
 
       <div class="clear" />
