--- a/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/ns0_taxonWithQueryStats.html
+++ b/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/ns0_taxonWithQueryStats.html
@@ -164,6 +164,20 @@
           </td>
           <td>The number of observations unique to this TVK in this query</td>
         </tr>
+		<tr>
+			<td>minYear</td>
+			<td>
+				minYear (int)
+			</td>
+			<td>The year for which the first record of this taxon is recorded for in this query</td>
+		</tr>
+		<tr>
+			<td>maxYear</td>
+			<td>
+				maxYear (int)
+			</td>
+			<td>The year for which the last record of this taxon is recorded for in this query</td>
+		</tr>
       </table>
 
       <div class="clear" />
