--- a/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/resource_TaxonObservationResource.html
+++ b/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/resource_TaxonObservationResource.html
@@ -243,12 +243,28 @@ and presence records are returned.  Valid values are 'true' and 'false'
           <td>query</td>
           <td>0</td>
         </tr>
+        <tr>
+          <td>callback</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>includeAttributes</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>query</td>
+          <td>false</td>
+        </tr>
       </table>
       <h3>Response Body</h3>
       <table>
         <tr>
           <td align="right">element:</td>
-          <td><a href="el_ns0_taxonObservation.html">taxonObservation</a></td>
+          <td>(custom)</td>
         </tr>
         <tr>
           <td align="right">media types:</td>
@@ -397,6 +413,22 @@ and presence records are returned.  Valid values are 'true' and 'false'
           </td>
           <td>form</td>
           <td>0</td>
+        </tr>
+        <tr>
+          <td>callback</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>form</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>includeAttributes</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>form</td>
+          <td>false</td>
         </tr>
       </table>
       <h3>Response Body</h3>
@@ -2377,7 +2409,7 @@ to (Injected Token no need to pass)
         <tr>
           <td>datasetKey</td>
           <td>
-            Datasets to search in
+            Datasets to search in (...&datasetKey=GA000001,...,GA00000X&...)
           </td>
           <td>query</td>
           <td></td>
@@ -2385,7 +2417,7 @@ to (Injected Token no need to pass)
         <tr>
           <td>ptvk</td>
           <td>
-            Taxon Version Keys to search for
+            Taxon Version Keys to search for (...&taxa=TVK1,...,TVKX&...)
           </td>
           <td>query</td>
           <td></td>
@@ -2450,6 +2482,170 @@ to (Injected Token no need to pass)
           <td>polygon</td>
           <td>
             WKT WGS-84 polygon filter
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>excludeResolutions</td>
+          <td>
+            A list of resolutions to filter out i.e.
+...&excludeResolutions=10km,2km&... limited to 10km, 2km, 1km and 100m
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+      </table>
+      <h3>Response Body</h3>
+      <table>
+        <tr>
+          <td align="right">element:</td>
+          <td><a href="el_ns0_taxonWithQueryStats.html">taxonWithQueryStats</a></td>
+        </tr>
+        <tr>
+          <td align="right">media types:</td>
+          <td>application/json</td>
+        </tr>
+      </table>
+      <p>A List of TaxonWithQueryStats conforming to the provided search
+parameters</p>
+      <h3>Status Codes</h3>
+      <table>
+        <tr>
+          <th>code</th>
+          <th>description</th>
+        </tr>
+        <tr>
+          <td>200</td>
+          <td>
+            Successfully returned a list of taxon with statistics which match the given filter
+          </td>
+        </tr>
+      </table>
+      <a name="POST"></a>
+      <h2>POST</h2>
+      <p>
+            Returns a list of Taxon With Query Stats, essentially Taxon Observations
+by species, conforming to the provided search parameters
+          </p>
+      <h3>Parameters</h3>
+      <table>
+        <tr>
+          <th>name</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+        <tr>
+          <td>user</td>
+          <td>
+            The current user, determines what datasets they have access
+to (Injected Token no need to pass)
+          </td>
+          <td>tokenuser</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>startYear</td>
+          <td>
+            The start year of the desired range
+          </td>
+          <td>query</td>
+          <td>-1</td>
+        </tr>
+        <tr>
+          <td>endYear</td>
+          <td>
+            The end year of the desired range
+          </td>
+          <td>query</td>
+          <td>-1</td>
+        </tr>
+        <tr>
+          <td>datasetKey</td>
+          <td>
+            Datasets to search in (...&datasetKey=GA000001,...,GA00000X&...)
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>ptvk</td>
+          <td>
+            Taxon Version Keys to search for (...&taxa=TVK1,...,TVKX&...)
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>spatialRelationship</td>
+          <td>
+            Any spatial relationship information required
+          </td>
+          <td>query</td>
+          <td>overlap</td>
+        </tr>
+        <tr>
+          <td>featureID</td>
+          <td>
+            Any required feature ID
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>sensitive</td>
+          <td>
+            If the results should include sensitive records or not
+          </td>
+          <td>query</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>designation</td>
+          <td>
+            Any required designations
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>taxonOutputGroup</td>
+          <td>
+            Any required taxon output groups
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>orgSuppliedList</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>query</td>
+          <td>-1</td>
+        </tr>
+        <tr>
+          <td>gridRef</td>
+          <td>
+            Any grid references to search within
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>polygon</td>
+          <td>
+            WKT WGS-84 polygon filter
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>excludeResolutions</td>
+          <td>
+            A list of resolutions to filter out i.e.
+...&excludeResolutions=10km,2km&... limited to 10km, 2km, 1km and 100m
           </td>
           <td>query</td>
           <td></td>
@@ -2600,6 +2796,172 @@ to (Injected Token no need to pass)
           <td>polygon</td>
           <td>
             WKT WGS-84 polygon filter
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>excludeResolutions</td>
+          <td>
+            A list of resolutions to filter out i.e.
+...&excludeResolutions=10km,2km&... limited to 10km, 2km, 1km and 100m
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+      </table>
+      <h3>Response Body</h3>
+      <table>
+        <tr>
+          <td align="right">element:</td>
+          <td>(custom)</td>
+        </tr>
+        <tr>
+          <td align="right">media types:</td>
+          <td>application/x-zip-compressed</td>
+        </tr>
+      </table>
+      <p>A Zip file containing a list of TaxonWithQueryStats conforming to
+the provided search parameters</p>
+      <h3>Status Codes</h3>
+      <table>
+        <tr>
+          <th>code</th>
+          <th>description</th>
+        </tr>
+        <tr>
+          <td>200</td>
+          <td>
+            Successfully created a download of taxon observations which match the given filter
+          </td>
+        </tr>
+      </table>
+      <a name="POST"></a>
+      <h2>POST</h2>
+      <p>
+            Returns a zip file containing a list of Taxon With Query Stats,
+essentially Taxon Observations by species, conforming to the provided
+search parameters. The same method as the GET request, for use with
+filters that would be longer than the Max URL limit some browsers
+          </p>
+      <h3>Parameters</h3>
+      <table>
+        <tr>
+          <th>name</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+        <tr>
+          <td>user</td>
+          <td>
+            The current user, determines what datasets they have access
+to (Injected Token no need to pass)
+          </td>
+          <td>tokenuser</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>startYear</td>
+          <td>
+            The start year of the desired range
+          </td>
+          <td>query</td>
+          <td>-1</td>
+        </tr>
+        <tr>
+          <td>endYear</td>
+          <td>
+            The end year of the desired range
+          </td>
+          <td>query</td>
+          <td>-1</td>
+        </tr>
+        <tr>
+          <td>datasetKey</td>
+          <td>
+            Datasets to search in
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>ptvk</td>
+          <td>
+            Taxon Version Keys to search for
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>spatialRelationship</td>
+          <td>
+            Any spatial relationship information required
+          </td>
+          <td>query</td>
+          <td>overlap</td>
+        </tr>
+        <tr>
+          <td>featureID</td>
+          <td>
+            Any required feature ID
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>sensitive</td>
+          <td>
+            If the results should include sensitive records or not
+          </td>
+          <td>query</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>designation</td>
+          <td>
+            Any required designations
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>orgSuppliedList</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>query</td>
+          <td>-1</td>
+        </tr>
+        <tr>
+          <td>taxonOutputGroup</td>
+          <td>
+            Any required taxon output groups
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>gridRef</td>
+          <td>
+            Any grid references to search within
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>polygon</td>
+          <td>
+            WKT WGS-84 polygon filter
+          </td>
+          <td>query</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>excludeResolutions</td>
+          <td>
+            A list of resolutions to filter out i.e.
+...&excludeResolutions=10km,2km&... limited to 10km, 2km, 1km and 100m
           </td>
           <td>query</td>
           <td></td>
