--- a/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/resource_OrganisationAccessRequestResource.html
+++ b/documentation/src/main/webapp/Web_Services/Web_Services-REST/resources/restapi/resource_OrganisationAccessRequestResource.html
@@ -91,6 +91,7 @@
         <li><a href="#path__organisation_organisationAccesses_-id-_requests.html">/organisation/organisationAccesses/{id}/requests</a></li>
         <li><a href="#path__organisation_organisationAccesses_-id-_requests_granted.html">/organisation/organisationAccesses/{id}/requests/granted</a></li>
         <li><a href="#path__organisation_organisationAccesses_-id-_requests_pending.html">/organisation/organisationAccesses/{id}/requests/pending</a></li>
+        <li><a href="#path__organisation_organisationAccesses_expired.html">/organisation/organisationAccesses/expired</a></li>
         <li><a href="#path__organisation_organisationAccesses_requests.html">/organisation/organisationAccesses/requests</a></li>
         <li><a href="#path__organisation_organisationAccesses_requests_-id-.html">/organisation/organisationAccesses/requests/{id}</a></li>
         <li><a href="#path__organisation_organisationAccesses_requests_admin.html">/organisation/organisationAccesses/requests/admin</a></li>
@@ -100,7 +101,9 @@
         <li><a href="#path__organisation_organisationAccesses_requests_granted.html">/organisation/organisationAccesses/requests/granted</a></li>
         <li><a href="#path__organisation_organisationAccesses_requests_history_-dataset-.html">/organisation/organisationAccesses/requests/history/{dataset}</a></li>
         <li><a href="#path__organisation_organisationAccesses_requests_pending.html">/organisation/organisationAccesses/requests/pending</a></li>
+        <li><a href="#path__organisation_organisationAccesses_requests_revoke_-id-.html">/organisation/organisationAccesses/requests/revoke/{id}</a></li>
         <li><a href="#path__organisation_organisationAccesses_reset_-dataset-.html">/organisation/organisationAccesses/reset/{dataset}</a></li>
+        <li><a href="#path__organisation_organisationAccesses_revokeExpired.html">/organisation/organisationAccesses/revokeExpired</a></li>
       </ul>
       <a name="path__organisation_organisationAccesses_-id-_requests.html"></a>
       <h1>/organisation/organisationAccesses/{id}/requests</h1>
@@ -303,6 +306,44 @@ organisation that are pending</p>
           </td>
         </tr>
       </table>
+      <a name="path__organisation_organisationAccesses_expired.html"></a>
+      <h1>/organisation/organisationAccesses/expired</h1>
+      <p class="note">Mount Point: <a href="../api/organisation/organisationAccesses/expired">/api/organisation/organisationAccesses/expired</a></p>
+      <a name="GET"></a>
+      <h2>GET</h2>
+      <p>
+            SysAdmin function to get all expired access requests, used to find expired
+requests
+          </p>
+      <h3>Parameters</h3>
+      <table>
+        <tr>
+          <th>name</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+        <tr>
+          <td>user</td>
+          <td>
+            The system admin user who called this endpoint
+          </td>
+          <td>tokensystemadministratoruser</td>
+          <td></td>
+        </tr>
+      </table>
+      <h3>Response Body</h3>
+      <table>
+        <tr>
+          <td align="right">element:</td>
+          <td>(custom)</td>
+        </tr>
+        <tr>
+          <td align="right">media types:</td>
+          <td>application/json</td>
+        </tr>
+      </table>
+      <p>A List of expired organisation access requests</p>
       <a name="path__organisation_organisationAccesses_requests.html"></a>
       <h1>/organisation/organisationAccesses/requests</h1>
       <p class="note">Mount Point: <a href="../api/organisation/organisationAccesses/requests">/api/organisation/organisationAccesses/requests</a></p>
@@ -1096,6 +1137,78 @@ to pass)
           </td>
         </tr>
       </table>
+      <a name="path__organisation_organisationAccesses_requests_revoke_-id-.html"></a>
+      <h1>/organisation/organisationAccesses/requests/revoke/{id}</h1>
+      <p class="note">Mount Point: <a href="../api/organisation/organisationAccesses/requests/revoke/{id}">/api/organisation/organisationAccesses/requests/revoke/{id}</a></p>
+      <a name="POST"></a>
+      <h2>POST</h2>
+      <p>
+            SysAdmin function to revoke access, typically called for expirations
+          </p>
+      <h3>Parameters</h3>
+      <table>
+        <tr>
+          <th>name</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+        <tr>
+          <td>user</td>
+          <td>
+            The system admin who called this endpoint
+          </td>
+          <td>tokensystemadministratoruser</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>id</td>
+          <td>
+            The filterID of the request to be expired
+          </td>
+          <td>path</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>silent</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>query</td>
+          <td>false</td>
+        </tr>
+      </table>
+      <h3>Response Body</h3>
+      <table>
+        <tr>
+          <td align="right">element:</td>
+          <td>(custom)</td>
+        </tr>
+        <tr>
+          <td align="right">media types:</td>
+          <td>application/json</td>
+        </tr>
+      </table>
+      <p>If the revoke action was a success</p>
+      <h3>Status Codes</h3>
+      <table>
+        <tr>
+          <th>code</th>
+          <th>description</th>
+        </tr>
+        <tr>
+          <td>200</td>
+          <td>
+            Successfully completed operation
+          </td>
+        </tr>
+        <tr>
+          <td>403</td>
+          <td>
+            The current user has no admin rights over this request
+          </td>
+        </tr>
+      </table>
       <a name="path__organisation_organisationAccesses_reset_-dataset-.html"></a>
       <h1>/organisation/organisationAccesses/reset/{dataset}</h1>
       <p class="note">Mount Point: <a href="../api/organisation/organisationAccesses/reset/{dataset}">/api/organisation/organisationAccesses/reset/{dataset}</a></p>
@@ -1141,6 +1254,67 @@ to pass)
         </tr>
       </table>
       <p>(no documentation provided)</p>
+      <a name="path__organisation_organisationAccesses_revokeExpired.html"></a>
+      <h1>/organisation/organisationAccesses/revokeExpired</h1>
+      <p class="note">Mount Point: <a href="../api/organisation/organisationAccesses/revokeExpired">/api/organisation/organisationAccesses/revokeExpired</a></p>
+      <a name="GET"></a>
+      <h2>GET</h2>
+      <h3>Parameters</h3>
+      <table>
+        <tr>
+          <th>name</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+        <tr>
+          <td>user</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>tokensystemadministratoruser</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>silent</td>
+          <td>
+            (no documentation provided)
+          </td>
+          <td>query</td>
+          <td>false</td>
+        </tr>
+      </table>
+      <h3>Response Body</h3>
+      <table>
+        <tr>
+          <td align="right">element:</td>
+          <td>(custom)</td>
+        </tr>
+        <tr>
+          <td align="right">media types:</td>
+          <td>application/json</td>
+        </tr>
+      </table>
+      <p>(no documentation provided)</p>
+      <h3>Status Codes</h3>
+      <table>
+        <tr>
+          <th>code</th>
+          <th>description</th>
+        </tr>
+        <tr>
+          <td>200</td>
+          <td>
+            Successfully completed oeration
+          </td>
+        </tr>
+        <tr>
+          <td>403</td>
+          <td>
+            Current user has no sysadmin rights
+          </td>
+        </tr>
+      </table>
 
       <div class="clear" />
     </div>
