--- a/importer.gui/src/main/webapp/app/index.html
+++ b/importer.gui/src/main/webapp/app/index.html
@@ -3,16 +3,19 @@
 <html xmlns:ng="http://angularjs.org"> <!-- required for ie7 -->
 <!-- do not use custom element tags such as <ng:view> (use the attribute version <div ng-view> instead -->
 <head>
-   <link type="text/css" rel="stylesheet" href="/app/css/bootstrap.cosmo.min.css">
+    <!--<link type="text/css" rel="stylesheet" href="/app/css/bootstrap.cosmo.min.css">-->
     <!--<link type="text/css" rel="stylesheet" href="/app/css/bootstrap.flatly.min.css">-->
     <!--<link type="text/css" rel="stylesheet" href="/app/css/bootstrap.cerulean.min.css">     -->
     <!--<link type="text/css" rel="stylesheet" href="/app/css/bootstrap.simplex.min.css">-->
+    <link type="text/css" rel="stylesheet" href="/app/css/bootstrap.css">
     <link rel="shortcut icon" type="image/png" href="/app/img/favicon.ico">
+    <!-- this is served as static resource -->
     <!--[if lte IE 7]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.min.js"></script>
     <![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
     <script src="/app/js/index.js"></script>
+    <script src="/app/js/ViewController.js"></script>
 
     <title>Importer</title>
 </head>
@@ -22,23 +25,31 @@
     <div class="span4 "><h2>IMPORTER</h2></div>
     <div class="span2">hello</div>
 </div>
-<div class="row">
-    <div class="span10 offset1">
-        <div class="navbar" >
-            <div class="navbar-inner">
-                <ul class="nav">
-                    <li class="active"><a href="#">Dataset </a></li>
-                    <li><a href="#">Metadata Form</a></li>
-                    <li><a href="#">Existing Dataset</a></li>
-                </ul>
+<div ng-controller="ViewController as view">
+    <div class="row">
+        <div class="span10 offset1">
+            <ul class="nav nav-pills">
+                <li><a href ng-class="{active : view.isSelected(1)}" ng-click="view.selectView(1)">Dataset </a></li>
+                <li><a href ng-class="{active : view.isSelected(2)}" ng-click="view.selectView(2)">Metadata Form</a>
+                </li>
+                <li><a href ng-class="{active : view.isSelected(3)}" ng-click="view.selectView(3)">Existing Dataset</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="span10 offset1">
+            <div ng-show="view.isSelected(1)">
+                1. This is : {{ view.selectedView }}
+            </div>
+            <div ng-show="view.isSelected(2)">
+                2. This is : {{ view.selectedView }}
+            </div>
+            <div ng-show="view.isSelected(3)">
+                3. This is : {{ view.selectedView }}
             </div>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="span12 offset2">
-        {{ 'World' | greet }}
-        </div>
-    </div>
 </body>
 </html>
