--- a/importer.gui/src/main/webapp/app/index.html
+++ b/importer.gui/src/main/webapp/app/index.html
@@ -15,6 +15,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.min.js"></script>
     <![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="/app/js/bootstrap.min.js"></script>
     <script src="/app/js/index.js"></script>
     <script src="/app/js/ViewController.js"></script>
 
@@ -23,10 +25,10 @@
 <body id="ng-app" ng-app="importer">
 <div class="row">
     <div class="span4 offset1"><img class="brand" src="/app/img/logo.jpg"/></div>
-    <div class="span4 "><h2>IMPORTER</h2></div>
-    <div class="span2">hello</div>
+    <div class="span4 "><h3>IMPORTER</h3></div>
 </div>
 <!--<div ng-include src="'views/navbar.html'"></div> -->
+<!-- ng-includes hit the server-->
 <div ng-include src="'/app/views/MetadataForm.html'"></div>
 
 </body>
