webdata binder not working with tests. jasmine included

--- a/importer.gui/src/main/webapp/app/index.html
+++ b/importer.gui/src/main/webapp/app/index.html
@@ -18,7 +18,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/app/js/bootstrap.min.js"></script>
     <script src="/app/js/index.js"></script>
-    <script src="/app/js/ViewController.js"></script>
+    <script src="/app/js/MetadataController.js"></script>
 
     <title>Importer</title>
 </head>
